--- a/sommaire1024.html
+++ b/sommaire1024.html
@@ -144,7 +144,7 @@
 
 	<div class="centre1">
 	
-	<BOUCLE_une(ARTICLES){ps=5}{doublons}{age_relatif>=0}{par date}{inverse}{0,1}>
+	<BOUCLE_une(ARTICLES){ps=5}{doublons}{date<(#ENV{date}|limite_age{-1})}{par date}{inverse}{0,1}>
 	<BOUCLE_rub_parent(RUBRIQUES){id_rubrique}><?php [$source='(#DESCRIPTIF)';] $titre_rub='[(#TITRE|texte_script)]'; ?></BOUCLE_rub_parent>
 	<?php
 		$para=retitrage('[(#TITRE|supprimer_numero|texte_script)]', 'tout', 'article', '[(#DATE)]', $titre_rub);
@@ -174,7 +174,7 @@
 
 	<div class="pavedepeches">
 	<div class="datesep"><a href='/tout'><img src='/img_rezo/plus2.gif' title='#TITRE' border='0' align='right' style='margin-top: 2px; margin-left: 5px;'></a>D&eacute;p&ecirc;ches</div>
-	<BOUCLE_depeches(ARTICLES){doublons}{lang=fr}{ps=2}{id_rubrique!=79}{age_relatif>=0}{age_relatif<=6}{par date}{inverse}{0,25}>
+	<BOUCLE_depeches(ARTICLES){doublons}{lang=fr}{ps=2}{id_rubrique!=79}{date<(#ENV{date}|limite_age{-1})}{date>(#ENV{date}|limite_age{6})}{par date}{inverse}{0,25}>
 	<BOUCLE_rub_parent3(RUBRIQUES){id_rubrique}><?php [$source='(#DESCRIPTIF)';] $titre_rub='[(#TITRE|texte_script)]'; ?></BOUCLE_rub_parent3>
 	<?php 
 	$para=retitrage('[(#TITRE|supprimer_numero|texte_script)]', 'tout', 'depeche', '[(#DATE)]', $titre_rub);
@@ -195,7 +195,7 @@
                 
 <B_labas>               <div class="pavedepeches" style="background: url(img_rezo/vert70.png);">
         <a href='/sources/labas'><img src='/img_rezo/plus2.gif' title='Toutes les &eacute;missions de Daniel Mermet' border='0' align='right' style='margin-top: 2px; margin-left: 5px;'></a><div class="datesep">&Eacute;couter &laquo; L&agrave;-bas si j'y suis &raquo;</div>
-        <BOUCLE_labas(ARTICLES){ps>0}{doublons}{age_relatif>=0}{id_rubrique=79}{par date}{inverse}{0,5}>
+        <BOUCLE_labas(ARTICLES){ps>0}{doublons}{date<(#ENV{date}|limite_age{-1})}{id_rubrique=79}{par date}{inverse}{0,5}>
         <a class="depeches" <?php echo href_rezo("#URL_SITE",#ID_ARTICLE); ?>><b>[(#TITRE|supprimer_numero|texte_script)]</b> <span class="auteur">(<?php echo ereg_replace("[0-9]{4}-([0-9]{2})-([0-9]{2}).*", "\\2/\\1", "#DATE"); ?>)</span></a>
         </BOUCLE_labas>        </div></B_labas>         
 
@@ -231,7 +231,7 @@
 	else
 		$type_retitrage = 'article';
 
-	<BOUCLE_suiteune(ARTICLES){ps>=3}{doublons}{lang=fr}{age_relatif>=0}{age_relatif<=6}{par popularite}{inverse}{0,25}>
+	<BOUCLE_suiteune(ARTICLES){ps>=3}{doublons}{lang=fr}{date<(#ENV{date}|limite_age{-1})}{date>(#ENV{date}|limite_age{6})}{par popularite}{inverse}{0,25}>
 		<BOUCLE_rub_parent2(RUBRIQUES){id_rubrique}>
 			$id_rub='[(#DESCRIPTIF*|texte_script)]'; $titre_rub='[(#TITRE|texte_script)]'; $code_rub='[(#DESCRIPTIF|texte_script)]'; 
 		</BOUCLE_rub_parent2>
@@ -346,7 +346,7 @@
 
 
 		<div class="datesep"><a href='/tout'><img src='/img_rezo/plus2.gif' title='#TITRE' border='0' align='right' style='margin-top: 2px; margin-left: 5px;'></a>Et aussi...</div>
-		<BOUCLE_aussi(ARTICLES){lang=fr}{ps>2}{ps<5}{id_rubrique!=79}{age_relatif>=0}{age_relatif<=15}{par date}{inverse}{0,50}>
+		<BOUCLE_aussi(ARTICLES){lang=fr}{ps>2}{ps<5}{id_rubrique!=79}{date<(#ENV{date}|limite_age{-1})}{date>(#ENV{date}|limite_age{15})}{par date}{inverse}{0,50}>
 			<BOUCLE_rub_parent4(RUBRIQUES){id_rubrique}><?php $i++; $id_rub='#ID_RUBRIQUE'; [$source='(#DESCRIPTIF)';] [$titre_rub='(#TITRE)';] ?></BOUCLE_rub_parent4>
 	        <?php 
 			if (!$deja['#ID_ARTICLE']) {
