--- a/mot.html
+++ b/mot.html
@@ -130,7 +130,7 @@
 <table width="750" cellpadding="0" cellspacing="0" border="0">
 <tr>
 
-	<BOUCLE_une(ARTICLES){ps>=3}{doublons}{id_mot}{lang=fr}{age_relatif>=0}{par date}{"<td>&nbsp;</td>"}{inverse}{0,1}>
+	<BOUCLE_une(ARTICLES){ps>=3}{doublons}{id_mot}{lang=fr}{date<(#DATE|limite_age{-1})}{par date}{"<td>&nbsp;</td>"}{inverse}{0,1}>
 	<BOUCLE_rub_parent(RUBRIQUES){id_rubrique}><?php [$source='(#DESCRIPTIF)';] $titre_rub='[(#TITRE|texte_script)]'; ?></BOUCLE_rub_parent>
 	<?php
 		$para=retitrage('[(#TITRE|supprimer_numero|texte_script)]', 'tout', 'article', '[(#DATE)]', $titre_rub);
@@ -211,7 +211,7 @@
 	else
 		$type_retitrage = 'article';
 
-	<BOUCLE_suiteune(ARTICLES){lang_select=non}{ps>=3}{doublons}{id_mot}{age_relatif>=0}{par date}{inverse}{0,50}>
+	<BOUCLE_suiteune(ARTICLES){lang_select=non}{ps>=3}{doublons}{id_mot}{date<(#DATE|limite_age{-1})}{par date}{inverse}{0,50}>
 		<BOUCLE_rub_parent2(RUBRIQUES){id_rubrique}>
 			$id_rub='[(#DESCRIPTIF*|texte_script)]'; $titre_rub='[(#TITRE|texte_script)]'; $code_rub='[(#DESCRIPTIF|texte_script)]'; 
 		</BOUCLE_rub_parent2>
@@ -333,7 +333,7 @@ if ('#ID_MOT'==623) {
 <B_labas>
         <div class="pavedepeches" style="background: url(img_rezo/vert70.png);">
         <div class="datesep">Des morts qui dérangent (Libération)</div>
-        <BOUCLE_labas(ARTICLES){ps>0}{doublons}{age_relatif>=0}{id_rubrique=211}{par date}{inverse}{0,30}>
+        <BOUCLE_labas(ARTICLES){ps>0}{doublons}{date<(#DATE|limite_age{-1})}{id_rubrique=211}{par date}{inverse}{0,30}>
         <a class="depeches" <?php echo href_rezo("#URL_SITE",#ID_ARTICLE); ?>><b>[(#TITRE|supprimer_numero|texte_script)]</b> <span class="auteur">(<?php echo ereg_replace("2005-([0-9]{2})-([0-9]{2}).*", "\\2/\\1", "#DATE"); ?>)</span></a>
         </BOUCLE_labas>
         </div>
@@ -392,11 +392,11 @@ if ('#ID_MOT'==623) {
                 </td>
                 <td width="50%">
 
-                        <?
-                        <BOUCLE_sources_art(ARTICLES){ps>=3}{id_mot}{age_relatif>=0}{par date}{inverse}{0,26}>
+                        <?php
+			<BOUCLE_sources_art(ARTICLES){ps>=3}{id_mot}{date<(#DATE|limite_age{-1})}{par date}{inverse}{0,26}>
                                 $addsource["#ID_RUBRIQUE"] = true;
                         </BOUCLE_sources_art>
-                        <BOUCLE_sources_art2(ARTICLES){ps>=2}{id_mot}{age_relatif>=0}{par date}{inverse}{0,126}>
+			<BOUCLE_sources_art2(ARTICLES){ps>=2}{id_mot}{date<(#DATE|limite_age{-1})}{par date}{inverse}{0,126}>
                                 $addsource["#ID_RUBRIQUE"] = true;
                         </BOUCLE_sources_art2>
                         ?>
