--- a/backend-bestof.html
+++ b/backend-bestof.html
@@ -28,7 +28,7 @@
 	    </item>
 	</BOUCLE3>
 
-	<BOUCLE4(ARTICLES){tout}{lang=fr}{ps=5}{par date}{inverse}{age<3}{unique}>
+	<BOUCLE4(ARTICLES) {lang=fr} {ps=5} {par date} {inverse} {date>(#ENV{date}|limite_age})} {unique}>
 	    <item>
 	      <title>[(#TITRE|retitre|texte_backend)]</title>
 	      <link>#URL_SITE</link>
