--- a/backend-tout.html
+++ b/backend-tout.html
@@ -28,7 +28,7 @@
 	    </item>
 	</BOUCLE3>
 
-	<BOUCLE4(ARTICLES){tout}{ps>1}{par date}{inverse}{age<3}{unique}>
+	<BOUCLE4(ARTICLES) {ps>1} {par date} {inverse} {date>(#ENV{date}|limite_age})} {unique}>
 	    <item>
 	      <title>[(#TITRE|retitre|texte_backend)]</title>
 	      <link>#URL_SITE</link>
